--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,17 @@
 <ion-header [translucent]="true">
+  <ion-toolbar color="primary">
+    <ion-title> Ionic Datetime </ion-title>
+  </ion-toolbar>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-segment [(ngModel)]="selectedMode" scrollable>
+      <ion-segment-button [value]="mode" *ngFor="let mode of modes">
+        <ion-label>{{mode}}</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item (click)="showPicker = !showPicker"> </ion-item>
+  <ion-datetime [presentation]="selectedMode"></ion-datetime>
 </ion-content>
