--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,18 +11,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-item (click)="showPicker = !showPicker">
-    <ion-label>Date</ion-label>
-    <ion-text slot="end"> {{formattedString}} </ion-text>
+<ion-content>
+  <ion-item id="open-modal">
+    <ion-icon icon="calendar-outline" slot="start" color="primary"></ion-icon>
+    <ion-label>Pick Date</ion-label>
+    <ion-text slot="end">{{formattedString}}</ion-text>
   </ion-item>
-  <ion-datetime
-    #datetime
-    *ngIf="showPicker"
-    [value]="dateValue"
-    size="cover"
-    (ionChange)="dateChanged(datetime.value)"
-    showDefaultButtons="true"
-    (ionCancel)="showPicker = false;"
-  ></ion-datetime>
+
+  <ion-modal trigger="open-modal">
+    <ng-template>
+      <ion-content>
+        <ion-datetime
+          #datetime
+          [value]="dateValue"
+          size="cover"
+          (ionChange)="dateChanged(datetime.value)"
+          (ionCancel)="showPicker = false;"
+        >
+          <ion-buttons slot="buttons">
+            <ion-button (click)="close()">Dismiss</ion-button>
+            <ion-button (click)="select()" color="primary">Select</ion-button>
+          </ion-buttons>
+        </ion-datetime>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
